--- a/stylesheets/extra.css
+++ b/stylesheets/extra.css
@@ -11,3 +11,12 @@
     border: 3px solid #bec1c6;
     background-color: #ffffff;
   }
+/* Красивые кнопки   */
+.md-typeset .md-button {
+    border-radius: 0.3rem;
+    font-weight: 400;
+    font-size: 0.7rem;
+    padding: 0.45em 0.9em;
+    color: var(--md-typeset-color);
+    margin-bottom: 10px;
+}
